--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,25 @@
+:root {
+  --green-mid: #405C41;
+  --gold: #C0C16D;
+  --black: #1B1C1B;
+  --white: #fff;
+  --container-offset-mobile: 32px;
+  --max-container-width: 1200px;
+  --body-font: 'Inter', sans-serif;
+  --heading-font: 'Jomolhari', serif;
+  --lg: 1176px;
+}
+
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--body-font);
+  color: var(--white);
+  font-weight: 400;
 }
 
 a {
@@ -15,12 +31,75 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h1, h2, h3, h4, h5 {
+  margin: 0;
+  font-weight: 400;
+}
+
+.container {
+  margin: 0 var(--container-offset-mobile);
+  position: relative;
+  height: 100%;
+}
+
+@media (min-width: 600px) {
+  .container {
+    width: 80%;
+    max-width: var(--max-container-width);
+    margin: 0 auto;
   }
-  body {
-    color: white;
-    background: black;
-  }
+}
+
+.button {
+  background-color: var(--green-mid);
+  color: var(--white);
+  text-transform: uppercase;
+  padding: 16px 80px;
+  border: 0;
+  cursor: pointer;
+  outline: inherit;
+  position: relative;
+  font-family: var(--body-font);
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 400;
+}
+
+.button::before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid var(--gold);
+}
+
+.button::after {
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid var(--gold);
+}
+
+.title {
+  font-family: var(--heading-font);
+  color: var(--white);
+  font-size: 48px;
+  line-height: 54px;
+  font-weight: 400;
+  position: relative;
+  padding-bottom: 17px;
+}
+
+.title::after {
+  content: '';
+  position: absolute;
+  width: 48px;
+  border-bottom: 1px solid var(--gold);
+  bottom: 0;
+  left: 0;
 }
