--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -2,6 +2,7 @@
   background-image: url("/images/bg.png");
   background-color: var(--green-mid);
   padding: 60px 0 80px;
+  margin-top: -1px;
 }
 
 .menuWrapper {
