--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -10,6 +10,8 @@
   text-align: center;
   padding-top: 20px;
   margin-bottom: 20px;
+  z-index: 100;
+  position: relative;
 
   h3 {
     font-family: var(--body-font);
@@ -29,9 +31,38 @@
   right: 0;
   top: 0;
   padding-top: 20px;
+  z-index: 100;
 
   svg {
     height: 24px;
     width: 24px;
   }
+}
+
+.menuCross {
+  padding-right: 3px;
+  padding-top: 3px;
+
+  svg {
+    height: 18px !important;
+    width: 18px !important;
+  }
+}
+
+.navigationOverlay {
+  height: 100vh;
+  width: 100%;
+  background: var(--green-mid);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 150px;
+}
+
+.navigationOverlayLink {
+  display: block;
+  font-family: var(--heading-font);
+  margin: 0 32px 40px;
+  font-size: 40px;
+  line-height: 40px;
 }
