--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,10 @@ h1, h2, h3, h4, h5 {
   }
 }
 
+.locked {
+  overflow-y: hidden;
+}
+
 .button {
   background-color: var(--green-mid);
   color: var(--white);
