--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -33,6 +33,13 @@
   .contact {
     h2 {
       text-align: center;
+
+      @media (min-width: 1176px) {
+        &::after {
+          right: 0;
+          margin: 0 auto;
+        }
+      }
     }
   }
 
